# dolphin-perforce-plugin

./: CMakeLists.txt  README.md
perforce/: CMakeLists.txt  Messages.sh  fileviewperforceplugin.cpp  fileviewperforceplugin.desktop  fileviewperforceplugin.h
